# 3D-Boid-Model

./: CMakeLists.txt  README.md
include/: Boid.hpp  DomainDecomp.hpp  NeighborSearch.hpp
src/: DomainDecomp.cpp  NeighborSearch.cpp  main.cpp
tests/: test_boid.cpp
